--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,43 @@
 body {
+  margin:0 auto;
+  padding:0;
+  height: 100%;
   font-family: 'Inconsolata', monospace;
 }
+
 
 h2 {
   font-size: 35px;
 }
 
+img {
+  height: calc(100vh - 40px);
+  margin-top: 40px;
+}
 #navbar {
   height: 40px;
-  display: flex;
-  justify-content: flex-end;
+  display: flex; 
+  justify-content: flex-end; 
   align-items: flex-end;
-  background: #fafafa;
+  background: white;
   border-radius: 2px;
   display: sticky;
+  border: 1px solid black;
+  border-top: none;
 }
 
 #navbar a {
   text-decoration: none;
   color: black;
   margin-right: 6%;
-  font-size: 26px;
+  font-size: 20px;
   margin-bottom: 10px;
+}
+
+#welcome-pic {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #welcome-section {
@@ -41,7 +57,7 @@ h2 {
   padding: 2%;
 }
 
-#projects-title {
+#projects-tile {
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -77,8 +93,13 @@ h2 {
 }
 
 .project:hover {
-background: #ffffff;
+  background: #ffffff;
+  border: 1px solid black;
+}
 
+.project a {
+  color: black;
+  text-decoration: none;
 }
 
 #touch {
@@ -88,14 +109,14 @@ background: #ffffff;
   align-items: center;
 }
 
-#profile-link {
+#links {
   height: calc(100vh - 40px - 40px);
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
-#profile-link a {
+#links a {
   text-decoration: none;
   color: black;
   font-size: 26px;
@@ -135,6 +156,14 @@ footer {
   position: fixed;
   top: 0;
   width: 100%
+}
+
+.none {
+  display: none;
+}
+
+.test {
+  background: black;
 }
 
 @media(max-width: 992px) {
